# Iplops-env

./: .gitignore  AI_DYNAMIC_SQUADS.md  AI_SELECTION_CRITERIA.md  API_DOCS.md  ARCHITECTURE.md  CURRENT_STATUS.md  DEPLOYMENT_CHECKLIST.md  DYNAMIC_SELECTION_FIXED.md  Dockerfile  GITHUB_PUSH_GUIDE.md  GPT4_COMPLETE.md  GPT4_INTEGRATION.md  HACKATHON_SUBMISSION.md  INDEX.md  PROJECT_STATS.md  PROJECT_STRUCTURE.md  QUICK_START_GPT4.md  QUICK_START_TASK2.md  README.md  README_GITHUB.md  README_HF.md  SERVER_RESTART_NOTE.md  SUMMARY.md  TASK2_GUIDE.md  TASK2_REBUILD_COMPLETE.md  TASK2_SUMMARY.md  TERMINAL_READY.md  USAGE.md  advanced_agent_task3.py  demo_task1.py  demo_task2.py  example_custom_agent.py  inference.py  init_ui.py  openenv.yaml  pyproject.toml  requirements.txt  run.bat  run.sh  run_task2_mi_vs_csk.py  (+6 more)
app/: __init__.py  api_clients.py  env.py  main.py  models.py  scraper.py  stadium_data.py  team_selector.py
app/graders/: __init__.py  grader1.py  grader2.py  grader3.py
app/prompts/: __init__.py  task3_prompts.py
app/tasks/: __init__.py  task1_staffing.py  task2_selection.py  task3_crisis.py
server/: app.py
static/: index.html  task2.html  test.html
