[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iplops-env"
version = "1.0.0"
description = "Indian Premier League Operations Environment - Real-world IPL match operations simulation for AI agent evaluation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "python-dotenv",
    "numpy",
    "openai>=2.7.2",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:run"

